<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Title">My Nanodegree Apps!</string>
    <string name="SpotifyText">SPOTIFY STREAMER</string>
    <string name="ScoresText">SCORES APP</string>
    <string name="LibraryText">LIBRARY APP</string>
    <string name="BuildItText">BUILD IT BIGGER</string>
    <string name="XYZText">XYZ READER</string>
    <string name="CAPText">CAPSTONE: MY OWN APP</string>
</resources>
