<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#E0F7FA">

    <TextView
        android:text="@string/Title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/textView"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <Button
        style="@style/AppButtonStyle"

        android:text="@string/SpotifyText"
        android:id="@+id/button1"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/textView"
        android:onClick="spotifyBtnClick"

     />

    <Button
        style="@style/AppButtonStyle"
        android:text="@string/ScoresText"
        android:id="@+id/button2"
        android:layout_below="@+id/button1"
        android:layout_marginTop="18dp"
        android:onClick="scoresBtnClick"
     />

    <Button
        style="@style/AppButtonStyle"
        android:text="@string/LibraryText"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_marginTop="18dp"
        android:onClick="libraryBtnClick"
    />

    <Button
        style="@style/AppButtonStyle"
        android:text="@string/BuildItText"
        android:id="@+id/button4"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/button3"
        android:onClick="buildItBtnClick"
    />

    <Button
        style="@style/AppButtonStyle"
        android:text="@string/XYZText"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_marginTop="18dp"
        android:onClick="xyzBtnClick"
    />

    <Button
        style="@style/AppButtonStyle"
        android:text="@string/CAPText"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_marginTop="18dp"
        android:background="#C51162"
        android:textColor="@android:color/white"
        android:onClick="capstoneBtnClick"
    />


</RelativeLayout>
